--- a/第一章、绪论/引言.md
+++ b/第一章、绪论/引言.md
@@ -1,11 +1,6 @@
 引言
 ===
-图像处理的作用：
----
-	> 改善图示信息以便解释
-	> 为存储和表示而对图像数据进行处理，以便于机器自动理解
-
 图像处理的定义：
 ---	
-	一幅图像可定义为二维函数f(x,y)，x,y是空间（平面）坐标，对任何一对空间坐标(x,y)处的幅值f称为在该点处的强度或灰度。
+	一幅图像可定义为二维函数f(x,y)。其中x,y是空间（平面）坐标，对任何一对空间坐标(x,y)处的幅值f称为在该点处的强度或灰度。
 	
