--- a/第一章、绪论/引言.md
+++ b/第一章、绪论/引言.md
@@ -1,6 +1,16 @@
 引言
 ===
+
 图像处理的定义：
 ---	
 	一幅图像可定义为二维函数f(x,y)。其中x,y是空间（平面）坐标，对任何一对空间坐标(x,y)处的幅值f称为在该点处的强度或灰度。
-	
+
+低级、中级、高级处理：
+---
+	* 低级处理：低级处理，图像预处理，对比度增强，图像尖锐化等
+	* 中级处理：图像分割，减少目标物的描述，输入图像输出图像的特征等
+	* 高级处理：识别目标的总体
+
+
+
+
