modify some files

--- a/第一章、绪论/引言.md
+++ b/第一章、绪论/引言.md
@@ -11,6 +11,22 @@
 	* 中级处理：图像分割，减少目标物的描述，输入图像输出图像的特征等
 	* 高级处理：识别目标的总体
 
-
-
-
+数字图像处理的步骤：
+---						图像处理        |	图像预处理 
+						   ∨	
+						图像滤波与增强  |	对图像进行某种操作  							
+					           ∨
+						图像复原	|
+						   ∨
+						彩色图像处理	|
+						   ∨
+						小波		|	不同分辨率来描述图像的基础
+						   ∨
+						形态学处理	|
+						   ∨
+						分割		|
+						   ∨
+						表示与描述	|
+						   ∨　
+						识别		|
+						
