modify some files

--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -16,11 +16,42 @@
 
 	空间取样：通过选择各个机械增量的数量并在取样处激活传感器来搜集数据完成的
 
+
+
 数字图像表示：
 ===
 	令f(s,t)表示一幅具有两个连续变量s和t的连续图像函数，通过取样量化，将函数转为数字图像。
 	由一幅图像的坐标张成的实平面部分称为空间域，x和y称为空间变量和空间坐标。
-	三种基本方法表示f(x,y)
+	
+	下图中展示了三种基本的方法表示f(x,y)
 ![images](./images/20170810161944.png)
 	
+	结论：
+		1. 图像显示允许我们快速观察结果
+		2. 数值阵列用于处理和算法开发
+		3. 以正式的数学术语表达取样和量化的过程，令Z和R分别表示整数集和实数集，取样处理可以看做把xy平面网格化，
+		   网格中的每个单元的中心的坐标是笛卡尔积中的一对元素。如果(x,y)是笛卡尔积中的整数，
+		   且f是把灰度值赋给每个特定坐标对(x,y)的一个函数，则f(x,y)是一幅图像。
+	#注意：
+		1. 数字图像的原点位于左上角，正x轴向下延伸，正y轴向右延伸
+		2. 数字化过程中，灰度级数典型地取2的整数次幂
+		
+	1. 图像系统的动态范围定义为系统中最大可度量灰度与最小检测灰度之比。上限取决于饱和度，下限取决于噪声。
+	   （动态范围由系统能表示的最低和最高灰度级来确定）
+	2. 对比度：一幅图像中最高和最低灰度级的灰度差为对比度
 
+空间和灰度分辨率：
+===
+	一、空间分辨率	
+		空间分辨率是图像中可辨别的最小细节的度量（每单位距离线对数，每单位距离点数是通用的度量）
+		1. 图像分辨率的广泛定义：每单位距离可分辨的最大线对数
+		2. 每单位距离点数是印刷和出版业中的常用的图像分辨率的度量
+		3. 美国使用每英寸点数(dpi)
+		#注意：
+			1. 空间分辨率的度量必须针对空间单位来规定
+			2. 256级 = 8 比特
+	二、灰度分辨率
+		灰度分辨率指在灰度级中可分辨的最小变化，灰度分辨率指的是用于量化灰度的比特数
+
+图像内插
+===
