modify some files

--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -19,7 +19,7 @@
 
 
 数字图像表示：
-===
+---
 	令f(s,t)表示一幅具有两个连续变量s和t的连续图像函数，通过取样量化，将函数转为数字图像。
 	由一幅图像的坐标张成的实平面部分称为空间域，x和y称为空间变量和空间坐标。
 	
@@ -41,7 +41,7 @@
 	2. 对比度：一幅图像中最高和最低灰度级的灰度差为对比度
 
 空间和灰度分辨率：
-===
+---
 	一、空间分辨率	
 		空间分辨率是图像中可辨别的最小细节的度量（每单位距离线对数，每单位距离点数是通用的度量）
 		1. 图像分辨率的广泛定义：每单位距离可分辨的最大线对数
@@ -54,4 +54,20 @@
 		灰度分辨率指在灰度级中可分辨的最小变化，灰度分辨率指的是用于量化灰度的比特数
 
 图像内插
+---
+	1. 内插是诸如放大、收缩、旋转和几何校正等任务中广泛应用的基本工具。
+	2. 图像的重取样方法：利用内插调整图像的大小
+	3. 内插是用已知数据来估计未知位置的数值的处理
+
+	*. 最近邻内插法：把原图像中最近邻的灰度赋给了每个新位置（不常用）
+	*. 双线性内插：用4个最近邻去估计给定位置的灰度，令(x,y)为我们想要赋灰度值的位置,v(x,y)为灰度值
+	   v(x,y) = ax + by + cxy + d
+ 	   4个系数由4个用(x,y)点最近邻点写出的位置方程确定
+	*. 双三次内插：包含16个最近邻点（商业图像编辑程序的标准内插方法）
+
+像素间的一些基本关系：
 ===
+	一、相邻像素
+		像素p的4个水平和垂直的相邻像素，坐标：(x+1,y),(x-1,y),(x,y+1),(x,y-1)，p的4邻域，N4(p)
+		p的4个对角相邻像素的坐标：(x+1,y+1),(x+1,y-1),(x-1,y+1),(x-1,y-1)，上述8个点称为p的8邻域,N8(p)
+	二、邻接性、连通性、区域和边界	
