--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -70,4 +70,14 @@
 	一、相邻像素
 		像素p的4个水平和垂直的相邻像素，坐标：(x+1,y),(x-1,y),(x,y+1),(x,y-1)，p的4邻域，N4(p)
 		p的4个对角相邻像素的坐标：(x+1,y+1),(x+1,y-1),(x-1,y+1),(x-1,y-1)，上述8个点称为p的8邻域,N8(p)
-	二、邻接性、连通性、区域和边界	
+	二、邻接性、连通性、区域和边界
+		令V是用于定义邻接性的灰度值的集合。在二值图像中，如果把具有1值得像素归诸于临界像素，则V={1}。
+		在灰度值范围为0-255的邻接像素中，集合V是这256个值的子集。
+
+		a) 4邻接：如果q在集合N4(p)中，则具有V中数值的两个像素p和q是4邻接的。
+		b) 8邻接：如果q在集合N8(p)中，则具有V中数值的两个像素p和q是8邻接的。
+		c）m邻接（混合邻接）：如果(i)q在N4(p)中，或者(ii)q在ND(p)中，且集合N4(p)∩N4(q)中没有来自V中的数值的像素，
+		则具有V中数值的两个像素p和q是m邻接的。
+
+
+		
