--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -6,7 +6,7 @@
 图像取样与量化：
 ---
 	前面多种获取图像的方法的目的就是从感知的数据生成数字图像。
-	1. 基本概念：一幅图像的x和y坐标可能都是连续的，为了将图像转成数字形式，必须在坐标上和幅度上进行取样操作。对坐标值进行数字化称为取样，
-	对幅值数字化称为量化。
+	1. 基本概念：一幅图像的x和y坐标可能都是连续的，为了将图像转成数字形式，必须在坐标上和幅度上进行取样操作。
+	对坐标值进行数字化称为取样，对幅值数字化称为量化。
 ![images](./images/20170805175502.png)	
 	
