--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -85,6 +85,9 @@
         三、通路
                 1. 从一个像素到另一个像素的通路（曲线）是特定的像素序列。n是通路的长度，如果首尾相等，则通路是闭合通路。
                 2. 坐标为(x0,y0),(x1,y1),(x2,y2)...,(xn,yn)。其中(x0,y0)=(x,y),(xn,yn)=(s,t)。且(xi,yi),(xi-1,yi-1)
-
-                
+                3. 令S是图像中的一个像素子集，如果S的全部像素之间存在一个通路，则可以说两个像素p和q在S中是连通的。对于S
+                中的任何像素p,S中连通到该像素的像素集称为S的连通分量。如果S仅有一个连通分量，则集合S称为连通集。
+                4. 令R是图像中的一个像素子集。如果R是连通集，称R为一个区域。若存在两个区域，如果Ri与Rj联合形成一个连通集，
+                则称为邻接区域
+                                   
 				
