--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -65,7 +65,7 @@
  	   4个系数由4个用(x,y)点最近邻点写出的位置方程确定
 	*. 双三次内插：包含16个最近邻点（商业图像编辑程序的标准内插方法）
 
-像素间的一些基本关系：
+像素间的一些基本关系
 ===
 	一、相邻像素
 		像素p的4个水平和垂直的相邻像素，坐标：(x+1,y),(x-1,y),(x,y+1),(x,y-1)，p的4邻域，N4(p)
@@ -84,10 +84,44 @@
 
         三、通路
                 1. 从一个像素到另一个像素的通路（曲线）是特定的像素序列。n是通路的长度，如果首尾相等，则通路是闭合通路。
-                2. 坐标为(x0,y0),(x1,y1),(x2,y2)...,(xn,yn)。其中(x0,y0)=(x,y),(xn,yn)=(s,t)。且(xi,yi),(xi-1,yi-1)
+                2. 坐标为(x0,y0),(x1,y1),(x2,y2)...,(xn,yn)。其中(x0,y0)=(x,y),(xn,yn)=(s,t)。且(xi,yi),(xi-1,yi-1)。
                 3. 令S是图像中的一个像素子集，如果S的全部像素之间存在一个通路，则可以说两个像素p和q在S中是连通的。对于S
                 中的任何像素p,S中连通到该像素的像素集称为S的连通分量。如果S仅有一个连通分量，则集合S称为连通集。
                 4. 令R是图像中的一个像素子集。如果R是连通集，称R为一个区域。若存在两个区域，如果Ri与Rj联合形成一个连通集，
-                则称为邻接区域
-                                   
-				
+                则称为邻接区域。不邻接的区域称为不连接区域。
+                5. 假设一幅图像包含K个不连接的区域，即Rk,k=1,2,3,4...，K，并且都不接触图像的边界。令Ru代表所有K个区域的
+                并集，并且令(Ru)c代表其补集。Ru中的所有点为图像的前景，(Ru)c中的所有点称为图像的背景。
+                6. 区域的边界与R的补集中的点邻近（一个区域的边界是该区域中至少一个背景邻点的像素集合）。
+ （此处有疑问）
+ ===
+        疑问：
+                1. 指定用于定义邻接的连通性。如果图中被圈出的点在区域及其背景间使用4连通，就不是1值边界区域的成员。
+                2. 边界不太懂
+        四、边界
+                1. 内边界
+                2. 外边界：对应于背景边界
+        五、距离度量
+                1. 对于坐标为(x,y),(s,t),(v,w)的像素p,q,z，如果：
+                   1. D(p,q) >= 0 [D(p,q) = 0,当且仅当p=q]
+                   2. D(p,q) = D(q,p)
+                   3. D(p,z) <= D(p,q) + D(q,z)
+                   称D是距离函数或度量
+        六、距离
+                1. 欧式距离（圆）
+                2. 城市街区距离（菱形）
+                   D4(p,q)=|x-s|+|y-t|
+                3. 棋盘距离（方形）
+                   D8(p,q)=max(|x-s|,|y-t|)
+                4. 若考虑m邻接，则两点间的Dm距离用点间的最短通路定义。两个像素间的距离将依赖于沿通路的像素值及其邻点值
+
+数字图像处理中所用数学工具的介绍
+===
+
+阵列与矩阵操作
+---
+        1. 阵列操作贯穿全书，一幅图像求幂，意味着每个像素均进行求幂操作；当谈到一幅图像除以另一个图像时，意味着在相应的
+        像素对之间进行相除
+---
+线性与非线性操作
+
+
