modify some files

--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -121,7 +121,69 @@
 ---
         1. 阵列操作贯穿全书，一幅图像求幂，意味着每个像素均进行求幂操作；当谈到一幅图像除以另一个图像时，意味着在相应的
         像素对之间进行相除
----
+
 线性与非线性操作
+---
+        1. 图像处理方法的最重要分类之一是线性是还是非线性的。考虑一般的算子H，该算子给定输入图像f(x,y),产生一幅图像的输
+        出g(x,y)即 H[f(x,y)]=g(x,y)
+        2. H[aifi(x,y) + ajfj(x,y)] = aiH[fi(x,y)] + ajH[fj(x,y)] = aigi(x,y) + ajgj(x,y) (ai,aj,fi(x,y),fj(x,y)分别是任
+        意常数和图像)
+                特性1. 两个输入的和与分别对输入进行操作然后求和得到的结果相同，加性
+                特性2. 输入乘以常数的线性操作的输出与乘以该常数的原始输入的操作的输出是相同的，同质性
+        3. 最大值操作，在图像中寻找像素的最大值。（如何证明通常求最大值的操作是非线性的案例见书42页）
+        
+ 算术操作
+ ---
+        1. 图像间的算术操作是阵列操作
+        例题：（暂时无法理解）
+                1. 针对降噪的带噪图像相加（平均）
+                2. 增强差别的图像相减
+                3. 使用图像相乘和相除来校正阴影
+        2. 给定一幅图像f，保证图像间算术操作的整个值域落在某个固定比特数的方法如下
+                首先：fm = f - min(f)，生成其最小值为0的一幅图像
+                然后：fs = K[fm/max(fm)]，处理8比特图像时，置K=255
+                
+集合和逻辑操作
+===
 
+基本集合操作
+---
+        1. 集合用于图像处理的一种方法是令集合的元素为图像中表示区域（物体）的像素的坐标（整数对）
 
+逻辑操作
+---
+        1. XOR异或：属于A或B，但不是A与B的交集
+
+模糊集合
+---
+
+空间操作
+===
+        单像素操作、邻域操作、几何空间变换
+        1. 单像素操作：以灰度为基础改变单个像素的值 s=T(z)
+        2. 邻域操作：令Sxy代表图像f中以任意一点(x,y)为中心的一个邻域的坐标集。邻域处理在图像g中的相同坐标处生成一个相应
+        的像素，该像素的值由输入图像中坐标在Sxy内的像素经指定操作决定
+        3. 几何空间变换和图像配准：几何变换改进图像中像素间的空间关系（橡皮膜变换）
+                1. 坐标的空间变换：最常用的空间坐标转换之一是仿射变换（表格见书51页）
+                                                 [t11 t12 0]        
+                        [ x y 1]=[v w 1]T=[v w 1]|t21 t22 0|
+                                                 [t31 t32 0]     
+
+                2. 灰度内插，即对空间变换后的像素赋灰度值。1完成像素的重新定位，为了完成该处理，还必须对这些新位置赋灰度
+                值，使用灰度内插即可完成。
+                3. 实际上按照两种基本方法使用1的公式
+                        1. 前向映射：在每个位置直接计算出图像中相应像素的空间位置（x，y）
+                        2. 反向映射
+                4. 图像配准：用于对齐多幅相同场景的图像
+                        1. 约束点（控制点）
+                        2. 估计变换函数（例4对相应的约束点）
+                                x = c1v + c2w + c3vw + c4
+                                y = c5v + c6w + c7vw + c8
+        4. 向量与矩阵操作：典型领域多光谱图像处理。每个RGB图像的每一个像素有三个分量
+                    [z1]，红    
+                z = |z2|，绿
+                    [z3]，蓝
+        5. 一旦像素被定义为向量，就可以使用向量矩阵理论。
+                例1：像素向量z和一个任意点a在n维空间的欧式距离D用向量积定义
+                        D(z,a)..... 也称向量范数||z-a||
+                例2：w = A(z-a)
