modify some files

--- a/第二章、数字图像基础/视觉感知要素.md
+++ b/第二章、数字图像基础/视觉感知要素.md
@@ -187,3 +187,70 @@
                 例1：像素向量z和一个任意点a在n维空间的欧式距离D用向量积定义
                         D(z,a)..... 也称向量范数||z-a||
                 例2：w = A(z-a)
+图像变换
+===
+        1. 有些情况下，通过变换输入图像来表达图像处理任务，在变换域执行指定的任务，之后再用反变换返回到空间域会更好
+        2. 表示为T(u,v)的二维线性变换是一类特别重要的变换
+
+### 待插入公式）
+
+        3. 如果r(x,y,u,v)=r1(x,u)r2(y,v)则正向变换核是可分的。如果r1(x,y)等于r2(x,y),则变换核是对称的，从而有r(x,y,u,v)=r1(x,u)r2(y,v)
+
+傅里叶和矩阵有点不懂
+====
+
+概率方法
+===
+        随机变量z关于均值的第n阶矩定义
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
