--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -11,11 +11,36 @@
 
 灰度变换和空间滤波的基础
 ---
+
         1. 在空间域
         2. g(x,y)=T[f(x,y)]
         3. 图3.1的计算过程见书63页
         4. 空间滤波，邻域与预定义的操作称为空间滤波器，在邻域中执行的操作类型决定了滤波处理的特性
 一些基本的灰度变换函数
----
+===
+
         1. 图像反转 s=L-1-r
-        2. 对数变换 s=clog(1+r)
+        2. 对数变换 s=clog(1+r)：将输入中范围较窄的低灰度值映射为输出中较宽范围的灰度值，可以用来①：扩展图像中的暗像素的值，同时压
+        缩更高灰度级的值。②：压缩像素值变化较大的图像的动态范围
+        3. 幂律（伽马）变换 s=cr**γ(c、γ正常数) 伽马校正
+        4. 分段线性变换函数
+                1. 对比度拉伸：扩展图像灰度级动态范围的处理
+                2. 灰度级分层：突出特定范围的亮度
+                        1. 感兴趣范围内的所有灰度值显示为一个值，其他灰度值为令一个值
+                        2. 感兴趣范围的灰度变亮（暗），保持图像中的其他灰度值不变
+                3. 比特平面分层：像素是由比特组成的数字
+直方图处理
+===
+        1. 各个灰度值所占比例
+        2. 用于图像增强，灰度变换
+ 直方图均衡
+ ---
+        r=0黑色，r=L-1白色
+        1. 将图像的灰度级看成区间[0,L-1]的随机变量。随机变量的基本描述子是其概率密度函数（PDF）。令pr(r)，ps(s)分别表示随机
+        变量r和s的概率密度函数。如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则ps(s)=pr(r)|dr/ds|。输出灰
+        度变量s的PDF就由输入灰度的PDF和所用的变换函数决定。
+        2. 关于上限的定积分的导数是被积函数在该上限的值
+        3. pr(r)的形式不影响ps(s)，ps(s)始终均匀
+        4. 直方图均衡的作用：
+        
+
