modify some files

--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -40,7 +40,8 @@
         变量r和s的概率密度函数。如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则ps(s)=pr(r)|dr/ds|。输出灰
         度变量s的PDF就由输入灰度的PDF和所用的变换函数决定。
         2. 关于上限的定积分的导数是被积函数在该上限的值
-        3. pr(r)的形式不影响ps(s)，ps(s)始终均匀
-        4. 直方图均衡的作用：
+        3. pr(r)的形式不影响ps(s)，ps(s)始匀
+        4. 直方图均衡的作用：自适应对比度增强
+        5. 直方图匹配（规定化）	 
         
 
