--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -42,6 +42,6 @@
         2. 关于上限的定积分的导数是被积函数在该上限的值
         3. pr(r)的形式不影响ps(s)，ps(s)始匀
         4. 直方图均衡的作用：自适应对比度增强
-        5. 直方图匹配（规定化）	 
+        5. 直方图匹配（规定化）：	 
         
 
