--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -36,15 +36,12 @@
         3. 低对比度图像具有较窄的直方图，且集中于灰度级的中部
  直方图均衡
  ---
-        1. 变量r表示待处理图像的灰度，r的取值[0,L-1]，r=0黑色，r=L-1白色
-        2. 灰度映射，s=T(r),0 <= r <= L-1
-        3. 当严格单调不满足时，
-        2. 随机变量的基本描述子是其概率密度函数（PDF）。令pr(r)，ps(s)分别表示随机
-        变量r和s的概率密度函数。如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则ps(s)=pr(r)|dr/ds|。输出灰
-        度变量s的PDF就由输入灰度的PDF和所用的变换函数决定。
-        2. 关于上限的定积分的导数是被积函数在该上限的值
-        3. pr(r)的形式不影响ps(s)，ps(s)始匀
-        4. 直方图均衡的作用：自适应对比度增强
+        1. 变量r表示待处理图像的灰度，r的取值[0,L-1]，r=0黑色，r=L-1白色。灰度映射，s=T(r),0 <= r <= L-1 
+        2. 随机变量的基本描述子是其概率密度函数（PDF）,令pr(r)，ps(s)分别表示随机变量r和s的概率密度函数。
+        3. 如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则ps(s)=pr(r)|dr/ds|。
+        4. 输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
+        
+(!积分图)[./images/jifen.jpg]        
 直方图匹配（规定化）
 ---
         
@@ -57,6 +54,12 @@
         2. 滤波产生新的像素，新像素的坐标等于邻域中心的坐标
 空间相关与卷积
 ---
+        1. 相关：滤波器模板移过图像并计算每个位置乘积之和的处理
+        2. 卷积：滤波器首先旋转180°
+        3. 将包含单个1而其余是0的函数称为离散单位冲激
+        4. 一个函数与离散单位冲激相关，在该冲激位置产生这个函数的一个翻转的版本
+        5. 卷积的基本特性是某个函数与某个单位冲激，得到一个在该冲激处的这个函数的拷贝
+        6. 
         
 
 
