modify some files

--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -41,7 +41,7 @@
         3. 如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则ps(s)=pr(r)|dr/ds|。
         4. 输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
         
-!(积分图)[./images/jifen.jpg]        
+![积分图](./images/jifen.jpg)        
 
 直方图匹配（规定化）
 ---
