add some contents

--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -34,14 +34,23 @@
         1. 各个灰度值所占比例
         2. 用于图像增强，灰度变换
         3. 低对比度图像具有较窄的直方图，且集中于灰度级的中部
- 直方图均衡
+
+直方图均衡
  ---
-        1. 变量r表示待处理图像的灰度，r的取值[0,L-1]，r=0黑色，r=L-1白色。灰度映射，s=T(r),0 <= r <= L-1 
+        1. 变量r表示待处理图像的灰度，r的取值[0,L-1]，r=0黑色，r=L-1白色。灰度映射，s=T(r),0 <= r <= L-1
+           a) T(r)在区间0 <= r <= L-1上为单调递增函数,保证输出灰度值不少于相应的输入值，防止产生缺陷
+           b) 当0 <= r <= L-1时，0 <= T(r) <= L-1,保证输出范围与输入范围相同
+           a') T(r)在区间0 <= r <= L-1上是严格单调递增函数,保证从结果到输入是一对一的关系
+           
         2. 随机变量的基本描述子是其概率密度函数（PDF）,令pr(r)，ps(s)分别表示随机变量r和s的概率密度函数。
-        3. 如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则ps(s)=pr(r)|dr/ds|。
-        4. 输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
+           如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则变量s的PDF，ps(s)=pr(r)|dr/ds|。
+           即输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
         
 ![积分图](./images/jifen.jpg)        
+
+        1. w是积分的假变量，公式右边是随机变量r的累积分布函数(CDF)
+        2. 在该等式中上限是r=(L-1)时，则积分值等于1（PDF曲线下方的面积总是1，所以s的最大值为（L-1））
+
 
 直方图匹配（规定化）
 ---
@@ -62,7 +71,3 @@
         5. 卷积的基本特性是某个函数与某个单位冲激，得到一个在该冲激处的这个函数的拷贝
         6. 
         
-
-
-
-
