modify some files

--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -37,19 +37,29 @@
 
 直方图均衡
  ---
-        1. 变量r表示待处理图像的灰度，r的取值[0,L-1]，r=0黑色，r=L-1白色。灰度映射，s=T(r),0 <= r <= L-1
-           a) T(r)在区间0 <= r <= L-1上为单调递增函数,保证输出灰度值不少于相应的输入值，防止产生缺陷
-           b) 当0 <= r <= L-1时，0 <= T(r) <= L-1,保证输出范围与输入范围相同
-           a') T(r)在区间0 <= r <= L-1上是严格单调递增函数,保证从结果到输入是一对一的关系
+        一、连续灰度
+                1. 变量r表示待处理图像的灰度，r的取值[0,L-1]，r=0黑色，r=L-1白色。灰度映射，s=T(r),0 <= r <= L-1
+                   a) T(r)在区间0 <= r <= L-1上为单调递增函数,保证输出灰度值不少于相应的输入值，防止产生缺陷
+                   b) 当0 <= r <= L-1时，0 <= T(r) <= L-1,保证输出范围与输入范围相同
+                   a') T(r)在区间0 <= r <= L-1上是严格单调递增函数,保证从结果到输入是一对一的关系
            
-        2. 随机变量的基本描述子是其概率密度函数（PDF）,令pr(r)，ps(s)分别表示随机变量r和s的概率密度函数。
-           如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则变量s的PDF，ps(s)=pr(r)|dr/ds|。
-           即输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
+                2. 随机变量的基本描述子是其概率密度函数（PDF）,令pr(r)，ps(s)分别表示随机变量r和s的概率密度函数。
+                   如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则变量s的PDF，ps(s)=pr(r)|dr/ds|。
+                   即输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
         
 ![积分图](./images/jifen.jpg)        
 
-        1. w是积分的假变量，公式右边是随机变量r的累积分布函数(CDF)
-        2. 在该等式中上限是r=(L-1)时，则积分值等于1（PDF曲线下方的面积总是1，所以s的最大值为（L-1））
+                3. w是积分的假变量，公式右边是随机变量r的累积分布函数(CDF)
+                4. 在该等式中上限是r=(L-1)时，则积分值等于1（PDF曲线下方的面积总是1，所以s的最大值为（L-1））
+
+![结论](./images/3.18.jpg)
+
+![例](./images/3.19.jpg)
+
+        二、离散值
+                1. 处理其概率（直方图值）与求和来代替处理概率密度函数与积分
+
+![离散形式](./images/3.20.jpg)
 
 
 直方图匹配（规定化）
