--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -66,6 +66,11 @@
 ---
         1. 用于产生处理后有特殊直方图的方法称为直方图匹配或直方图规定化
 
+![图3.21](./images/3.21.jpg)
+
+![图3.22](./images/3.22.jpg)
+
+
 空间滤波基础
 ===
         1. 滤波指接受或拒绝一定的频率分量。通过低频的滤波器称为低通滤波器，低通滤波器的最终效果是模糊（平滑）一幅图像。
