modify some files

--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -70,6 +70,14 @@
 
 ![图3.22](./images/3.22.jpg)
 
+        2. 一幅给定图像得到一幅灰度级具有指定概率密度函数的图像
+           a) 由输入图像得到pr(r),并由式(3.3-10)求得s的值
+           b) 使用式(3.3-11)中指定的PDF求得变换函数G(z)
+           c) 求得反变换函数z=G-1(s)，因为z是由s得到的，所以该处理是s到z的映射
+           d) 首先用式(3.3-10)对输入图像进行均衡得到输出图像；该图像的像素值是s值。对均衡后的图像中具有s值的每个像素执行
+           反映射z=G-1(s)，得到输出图像中的相应像素。当所有图像处理完后，输出图像的PDF等于指定的PDF
+
+![例题](./images/3.23.jpg)
 
 空间滤波基础
 ===
