--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -79,9 +79,32 @@
 
 ![例题](./images/3.23.jpg)
 
-        3. 离散形式
+        3. 离散形式直方图规定化过程
+           a) 计算给定图像的直方图pr(r)
         
 ![离散](./images/3.24.jpg)       
+
+直方图均衡与直方图匹配的比较
+---
+        1. 直方图规定化大部分是试凑过程
+
+局部直方图处理
+---
+        1. 以每个像素的邻域中的灰度分布为基础设计变换函数
+
+在图像增强中使用直方图统计
+---
+        1. 方差（标准差）是图像对比度的度量
+        2. 在仅处理均值和方差时，实际上直接通过从取样值来估计他们，而不必计算直方图，这些估计称为取样均值和取样方差
+        3. 一幅图像的平均灰度可以由求所有像素的灰度值之和，并用图像中的像素总数去除而得到
+
+![3.25](./images/3.25.jpg)
+        
+        4. 局部均值和方差是根据图像中每一像素的邻域内的图像特征进行改变的基础
+
+
+
+
 
 空间滤波基础
 ===
