modify some files

--- a/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
+++ b/第三章、灰度变换与空间滤波/灰度变换与空间滤波.md
@@ -1,10 +1,10 @@
 引言
 ===
-        1. 空间域：平面本身，直接操作图像中的像素。
-        2. 变换域：先把一幅图像变换到变换域，在变换域进行处理，然后通过反变换把处理结果返回到空间域。
-        3. 空间域的处理主要分为：灰度变换和空间滤波。
-        4. 灰度变换在图像的单个像素上操作，以对比度和阈值处理为目的。
-        5. 空间滤波涉及改善性能的操作，如通过图像中的每一个像素的邻域来锐化图像。
+        1. 空间域：平面本身，直接操作图像中的像素
+        2. 变换域：先把一幅图像变换到变换域，在变换域进行处理，然后通过反变换把处理结果返回到空间域
+        3. 空间域的处理主要分为：灰度变换和空间滤波
+        4. 灰度变换在图像的单个像素上操作，以对比度和阈值处理为目的
+        5. 空间滤波涉及改善性能的操作，如通过图像中的每一个像素的邻域来锐化图像
 
 背景知识
 ===
@@ -43,8 +43,8 @@
                    b) 当0 <= r <= L-1时，0 <= T(r) <= L-1,保证输出范围与输入范围相同
                    a') T(r)在区间0 <= r <= L-1上是严格单调递增函数,保证从结果到输入是一对一的关系
            
-                2. 随机变量的基本描述子是其概率密度函数（PDF）,令pr(r)，ps(s)分别表示随机变量r和s的概率密度函数。
-                   如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则变量s的PDF，ps(s)=pr(r)|dr/ds|。
+                2. 随机变量的基本描述子是其概率密度函数（PDF）,令pr(r)，ps(s)分别表示随机变量r和s的概率密度函数
+                   如果pr(r)和T(r)已知，且在感兴趣的值域T(r)上是连续且可微的，则变量s的PDF，ps(s)=pr(r)|dr/ds|
                    即输出灰度变量s的PDF就由输入灰度的PDF和所用的变换函数计算得出。
         
 ![积分图](./images/jifen.jpg)        
@@ -101,14 +101,14 @@
 ![3.25](./images/3.25.jpg)
         
         4. 局部均值和方差是根据图像中每一像素的邻域内的图像特征进行改变的基础
-
-
-
-
+        5. 判断一个区域在点(x,y)是暗还是亮的方法是把局部平均灰度与全局均值的平均灰度进行比较
+        6. 满足局部增强所有条件的一个位于点(x,y)处的像素，可简单通过将像素值乘以一个指定的常数F来处理，以便相对于图像的
+        其他部分增大（或减小）其灰度值，不满足增强条件的像素则保持不变
 
 空间滤波基础
 ===
-        1. 滤波指接受或拒绝一定的频率分量。通过低频的滤波器称为低通滤波器，低通滤波器的最终效果是模糊（平滑）一幅图像。
+        1. 滤波指接受或拒绝一定的频率分量。通过低频的滤波器称为低通滤波器，低通滤波器的最终效果是模糊（平滑）一幅图像
+        
 空间滤波机理
 ---
         1. 空间滤波器由一个邻域、对该邻域包围的图像像素执行的预定义操作组成
